[package]
name = "z-stream"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
authors = ["Zac McChesney <imzacm@gmail.com>"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []

[dependencies]
rand = "0.9"

thiserror = "2.0"

camino = "1.2"

walkdir = "2.5"
parking_lot = "0.12"
flume = "0.11"

tempfile = "3.23"

gstreamer = "0.24"
gstreamer-pbutils = "0.24"
glib = "0.21"

[build-dependencies]
ureq = "3.1"
flate2 = "1.1"
tar = "0.4"
zip = "6.0"
